--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -29,6 +29,19 @@
 
 .cart-item-details {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.cart-item-details h3 {
+  font-size: 1.25rem;
+  margin: 0;
+}
+
+.cart-item-details p {
+  font-size: 1rem;
+  margin: 0;
 }
 
 .cart-item-actions {
